--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -8,16 +8,21 @@
 <body>
   <h1>Add a Page</h1>
   <div>
-    <form id="add_page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
-      {% csrf_token %}
-      {% for hidden in form.hidden_fields %}
-      {{ hidden }}
-      {% endfor %}
-      {% for field in form.visible_fields %}
-      {{ field.errors }}
-      {{ field.help_text }}
-      {{ field }}
-      {% endfor %}
+    {% if category %}
+        <form id="add_page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
+          {% csrf_token %}
+          {% for hidden in form.hidden_fields %}
+          {{ hidden }}
+          {% endfor %}
+          {% for field in form.visible_fields %}
+          {{ field.errors }}
+          {{ field.help_text }}
+          {{ field }}
+          {% endfor %}
+          {% else %}
+          <strong>The specified category does not exist.</strong>
+      {% endif %}
+
       <input type="submit" name="submit" value="Add Page" />
     </form>
   </div>
