--- a/templates/rango/add_category.html
+++ b/templates/rango/add_category.html
@@ -1,11 +1,12 @@
-<!DOCTYPE html>
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<head>
-  <title>Rango</title>
-</head>
+{% block title_block %}
+    Add a Category
+{% endblock %}
 
-<body>
+{% block body_block %}
+
   <h1>Add a Category</h1>
   <div>
     <form id="category_form" method="post" action="/rango/add_category/">
@@ -21,6 +22,4 @@
       <input type="submit" name="submit" value="Create Category" />
     </form>
   </div>
-</body>
-
-</html>
+{% endblock %}
