--- a/templates/rango/add_page.html
+++ b/templates/rango/add_page.html
@@ -1,12 +1,13 @@
-<!DOCTYPE html>
-<html>
+{% extends 'rango/base.html' %}
+{% load staticfiles %}
 
-<head>
-  <title>Rango</title>
-</head>
+{% block title_block %}
+    Add a Page
+{% endblock %}
 
-<body>
-  <h1>Add a Page</h1>
+{% block body_block %}
+
+<h1>Add a Page to {{ category.name }}</h1>
   <div>
     {% if category %}
         <form id="add_page_form" method="post" action="/rango/category/{{ category.slug }}/add_page/">
@@ -26,6 +27,4 @@
       <input type="submit" name="submit" value="Add Page" />
     </form>
   </div>
-</body>
-
-</html>
+{% endblock %}
