--- a/templates/rango/about.html
+++ b/templates/rango/about.html
@@ -11,7 +11,10 @@
   here is the about page. <br />
   This tutorial has been put together by Mohamed Abdi Mire.<br />
 </div>
+<div>
+  Visits: {{ visits }}
 
+</div>
 <img src="{% static 'images/rango.jpg' %}" alt="Picture of Rango" />
 <img src="{{ MEDIA_URL }}cat.jpg" alt="Picture of a Cat" />
 {% endblock %}
